force-app/main/default/objects/DA_Transport__b/DA_Transport__b.object-meta.xml
<CustomObject>
    <label>DA Transport</label>
    <pluralLabel>DA Transport</pluralLabel>
</CustomObject>