force-app/main/default/objects/DA_Transport__b/fields/S_Name__c.field-meta.xml
<CustomField>
    <fullName>S_Name__c</fullName>
    <label>Transport Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>