force-app/main/default/objects/DA_Transport__b/fields/Transport_Duration__c.field-meta.xml
<CustomField>
    <fullName>Transport_Duration__c</fullName>
    <label>Transport Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>